# pyclesperanto

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  CMakeLists.FUTURE  CMakeLists.KEEP  CMakeLists.txt  CONDA_RECIPES.md  LICENSE  MANIFEST.in  README.md  RESTRUCTURING_PLAN.md  hatch_build.py  pixi.toml  pyproject.toml  setup.KEEP  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  generic-issue.md  prototype-related-issue.md
.github/workflows/: auto-update-pr.yml  auto-update-tier.yml  auto-update.yml  build-CUDA.yml  build-OpenCL.yml  build.yml  build_and_deploy.yml  build_and_test.yml  clic_release.yml  conda.yml  deploy.yml  pages.yml  wheels.yml
backends/cuda/: CMakeLists.txt  README.md  pyproject.toml
backends/cuda/pyclesperanto_cuda/: __init__.py
backends/metal/: CMakeLists.txt  README.md  pyproject.toml
backends/metal/pyclesperanto_metal/: __init__.py
backends/opencl/: CMakeLists.txt  README.md  pyproject.toml
benchmarking/: affine_transforms.ipynb  benchmark_affine_transforms.ipynb  benchmark_basic_operations.ipynb  benchmark_gaussian.ipynb  benchmark_histogram.ipynb  benchmark_intensity_projections.ipynb  benchmark_mini_pipeline.ipynb  benchmark_otsu.ipynb  benchmark_sobel.ipynb  benchmark_top_hat.ipynb  benchmarking_fft.ipynb  benchmarking_tribolium_workflow.ipynb  test_matmul.ipynb  top_hat.ipynb
conda.recipe/: conda_build_config.yaml  meta.yaml
demo/: API_demo.ipynb  benchmark_basic_operations.ipynb  benchmark_connected_components_labeling.ipynb  benchmark_gaussian.ipynb  benchmark_histogram.ipynb  benchmark_mini_pipeline.ipynb  benchmark_otsu.ipynb  raw_c++_to_python_wrapper_API_example.ipynb
demos/: README.md  Untitled.ipynb  add_image_and_scalar.cl  cell_segmentation.ipynb  explore_API.ipynb  find_local_maxima.ipynb  image_API.ipynb  image_filtering.ipynb  multi_gpu_demo.ipynb  process_blobs.ipynb  process_tribolium.ipynb  run_custom_kernel.ipynb  set_get_item.ipynb
demos/advance/: execute_custom_opencl_kernel.ipynb  image_API.ipynb  multi-gpu_tile_processing_with_dask.ipynb  multi_gpu_demo.ipynb  tilling_with_multi-gpus.ipynb
demos/api/: execute_custom_opencl_kernel.ipynb  kernel_usage.ipynb  memory_management.ipynb  multi_device_processing.ipynb  multi_device_usage.ipynb  push_pull_create.ipynb  select_backends.ipynb  select_devices.ipynb
demos/basics/: arithmetic_operators.ipynb  browse_operations.ipynb  colors.ipynb  count_blobs.ipynb  crop_and_paste_images.ipynb  crop_flip_paste.ipynb  equal_constant.ipynb  image_size_limitations.ipynb  imshow.ipynb  inspecting_3d_images.ipynb  label_statistics.ipynb  matrices_operations.ipynb  multiply_matrices.ipynb  multiply_vectors_and_matrices.ipynb  nonzero.ipynb  select_backend.ipynb  spots_pointlists_matrices_tables.ipynb  switching_gpus.ipynb  test_max_position.ipynb  vectors_and_matrices_operations.ipynb  voronoi_diagrams.ipynb
demos/examples/: Segmentation_3D.ipynb  Untitled.ipynb  (+20 more)
developer_docs/: API_demo.ipynb  Clesperanto_gateway_API_example.ipynb  benchmark_basic_operations.ipynb  benchmark_gaussian.ipynb  benchmark_mini_pipeline.ipynb  benchmark_otsu.ipynb  raw_c++_to_python_wrapper_API_example.ipynb
docs/: API_differences.ipynb  README.rst  build_doc.py  index.html
pyclesperanto/: __init__.py  __main__.py  __main__.py.in  _array.py  _backend.py  _bia_bob_plugins.py  _categories.py  _clesperanto_gateway.py  _communications.py  _core.py  _decorators.py  _device.py  _execute.py  _functionalities.py  _gateway.py  _image.py  _image_operators.py  _interroperability.py  _memory.py  _memory_operations.py  _operations.py  _operators.py  _tier1.py  _tier2.py  _tier3.py  _tier4.py  _tier5.py  _tier6.py  _tier7.py  _tier8.py  _types.py  _utils.py  _version.py  pyclesperanto.cpp  pyclesperanto.hpp  pydata.cpp  pydata.hpp  pygpu.cpp  pygpu.hpp  pytier1.cpp  (+4 more)
script/: unix-opencl-buil.sh
scripts/: all_build.cmake  build-cuda-linux.sh  build-opencl-linux.sh  build-opencl-macos.sh  build-opencl-windows.sh  cuda_build.cmake  generate-tiers-package.ipynb  ocl_build.cmake  pyclesperanto_all_build.cmake  pyclesperanto_autogen_tier_script.ipynb  pyclesperanto_cuda_build.cmake  pyclesperanto_ocl_build.cmake  repair-cuda-windows.sh  repair-nvrtc-linux.sh  unix-opencl-build.sh
src/clic/: CMakeLists.txt
tests/: README.md  conftest.py  test_absolute.py  test_absolute_difference.py  test_add_image_and_scalar.py  test_add_images.py  test_add_images_and_scalar.py  test_add_images_weighted.py  test_affine_transform.py  test_api_list.py  test_array_device.py  test_array_equal.py  test_array_operators.py  test_binary_and.py  test_binary_edge_detection.py  test_binary_not.py  test_binary_operations.py  test_binary_or.py  test_binary_subtract.py  test_binary_xor.py  test_block_enumerate.py  test_bottom_hat_box.py  test_bottom_hat_sphere.py  test_bounding_box.py  test_cl_info.py  test_clip.py  test_closing_box.py  test_closing_labels.py  test_closing_sphere.py  test_concatenate.py  test_connected_components_labeling.py  test_connected_components_labeling_box.py  test_connected_components_labeling_diamond.py  test_convolve.py  test_copy.py  test_core.py  test_count_touching_neighbors.py  test_create.py  test_crop.py  test_crop_border.py  (+188 more)
user_docs/: Untitled.ipynb  cell_segmentation.ipynb  explore_API.ipynb  find_local_maxima.ipynb  image_filtering.ipynb  multi_gpu_demo.ipynb  multi_gpu_test.ipynb  process_blobs.ipynb  process_tribolium.ipynb
wrapper/: _version.py.in  array_.cpp  array_wrapper.cpp  backend_wrapper.cpp  clEnumType.cpp  clGateway.cpp  clGateway.hpp  clImage.cpp  clImage.hpp  cleEnumType.cpp  cleGateway.cpp  cleGateway.hpp  cleImage.cpp  cleMemory.cpp  cleProcessor.cpp  cleTier1.cpp  cleTier2.cpp  cleTier3.cpp  cleTier4.cpp  cleTier5.cpp  cleTier6.cpp  cletier1.cpp  core_.cpp  pyImage.cpp  pyImage.hpp  pycle_wrapper.cpp  pycle_wrapper.hpp  pyclesperanto.cpp  pyclesperanto.hpp  pydata.hpp  pygateway.cpp  pygateway.hpp  pygpu.cpp  pytier1.cpp  pytier2.cpp  pytier3.cpp  pytier5.cpp  pytier6.cpp  tier1_.cpp  tier1_wrapper.cpp  (+9 more)
(+276 files in other folders)
