[build-system]
build-backend = "scikit_build_core.build"
requires = ["setuptools", "wheel", "scikit-build-core", "pybind11"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.ninja]
make-fallback = false
minimum-version = "1.11"

[tool.scikit-build.cmake]
build-type = "Release"
minimum-version = "3.26.1"


[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
regex = 'VERSION = "(?P<value>\d+\.\d+\.\d+)"'
input = "pyclesperanto/_version.py"

[tool.scikit-build.sdist]
exclude = [".flake8", ".git*", "*.yaml", "*.ipynb", "*.yml", "docs"]

[project]
authors = [
  { name = "Stephane Rigaud", email = "stephane.rigaud@pasteur.fr" },
  { name = "Robert Haase", email = "robert.haase@uni-leipzig.de" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
  "numpy",
  "toolz",
  "matplotlib",
  "toml",
]
description = "GPU-accelerated image processing in python using OpenCL"
name = "pyclesperanto"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]


[project.urls]
Documentation = "https://clesperanto.github.io/pyclesperanto/"
Examples = "https://clesperanto.github.io/pyclesperanto/demos/"
Issues = "https://github.com/clEsperanto/pyclesperanto/issues"
Source = "https://github.com/clEsperanto/pyclesperanto/"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.cibuildwheel]
build = [
  "cp38-*",
  "cp39-*",
  "cp310-*",
  "cp311-*",
  "cp312-*",
  "cp313-*",
]
skip = [
  "cp27-*",
  "cp36*",
  "cp37*",
  "pp*",
  "*-win32",
  "*-musllinux*",
  "*_i686",
  "*_universal2",
]
build-frontend = "build"
build-verbosity = 1
test-command = "pytest {project}/tests/test_import.py"
test-requires = ["pytest", "pytest-cov", "pytest-benchmark", "scikit-image"]

[tool.cibuildwheel.linux]
before-all = ["bash {package}/scripts/build-opencl-linux.sh"]
repair-wheel-command = "auditwheel show {wheel} && auditwheel repair --lib-sdir .libs -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
before-all = "bash {package}/scripts/build-opencl-windows.sh"
environment = { SKBUILD_CMAKE_ARGS = "-DOpenCL_LIBRARIES:FILEPATH='C:/Program Files/OpenCL-ICD-Loader/lib/OpenCL.lib';-DOpenCL_INCLUDE_DIRS:PATH='C:/Program Files/OpenCL-ICD-Loader/include/'" }

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = '10.14' }

[tool.isort]
profile = "black"

[project.entry-points."bia_bob_plugins"]
plugin_pyclesperanto = "pyclesperanto._bia_bob_plugins:list_bia_bob_plugins"
