# =============================================================================
# Build System Configuration
# =============================================================================

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "wheel"]

# =============================================================================
# Package Metadata
# =============================================================================

[project]
authors = [
  { name = "Stephane Rigaud", email = "stephane.rigaud@pasteur.fr" },
  { name = "Robert Haase", email = "robert.haase@uni-leipzig.de" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.20,<3",
    "toolz>=0.11,<2",
    "matplotlib>=3.5,<4",
    "pyclesperanto-opencl"
]
description = "GPU-accelerated image processing in python using OpenCL or CUDA"
name = "pyclesperanto"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
license = { file = "LICENSE" }
keywords = ["image processing", "GPU", "OpenCL", "CUDA", "scientific computing"]

[project.urls]
Documentation = "https://clesperanto.github.io/pyclesperanto/"
Examples = "https://clesperanto.github.io/pyclesperanto/demos/"
Issues = "https://github.com/clEsperanto/pyclesperanto/issues"
Source = "https://github.com/clEsperanto/pyclesperanto/"

[project.entry-points."bia_bob_plugins"]
plugin_pyclesperanto = "pyclesperanto._bia_bob_plugins:list_bia_bob_plugins"

[project.optional-dependencies]
cuda = ["pyclesperanto-cuda; sys_platform != 'darwin'"]
all = ["pyclesperanto-opencl", "pyclesperanto-cuda; sys_platform != 'darwin'"]

# =============================================================================
# Hatch Configuration
# =============================================================================

[tool.hatch.version]
path = "pyclesperanto/_version.py"
pattern = 'VERSION = "(?P<version>[0-9]+\.[0-9]+\.[0-9]+[a-z0-9.]*)"'

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.isort]
profile = "black"
