# =============================================================================
# Build System Configuration
# =============================================================================

[build-system]
build-backend = "scikit_build_core.build"
requires = ["wheel", "scikit-build-core", "pybind11"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.ninja]
make-fallback = false

[tool.scikit-build.cmake]
build-type = "Release"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "../../pyclesperanto/_version.py"
regex = 'VERSION = "(?P<value>[0-9]+\.[0-9]+\.[0-9]+[a-z0-9.]*)"'

[tool.scikit-build.sdist]
exclude = [".git*"]

# =============================================================================
# Package Metadata
# =============================================================================

[project]
authors = [
  { name = "Stephane Rigaud", email = "stephane.rigaud@pasteur.fr" },
  { name = "Robert Haase", email = "robert.haase@uni-leipzig.de" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Image Processing",
]
description = "CUDA backend for pyclesperanto, a Python library for GPU-accelerated image processing"
name = "pyclesperanto-cuda"
requires-python = ">=3.8"
dynamic = ["version"]
license = { file = "../../LICENSE" }
keywords = ["image processing", "GPU", "CUDA", "scientific computing"]

# =============================================================================
# cibuildwheel Configuration
# =============================================================================

[tool.cibuildwheel]
build = ["cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["*-win32", "*-musllinux*", "*_i686", "*_universal2", "*-macosx*"]
build-frontend = "build"
build-verbosity = 1
# CUDA import requires nvcuda.dll (NVIDIA driver), which is absent on CI runners (no GPU).
# Instead, we verify the wheel was built correctly by checking the native extension is present.
test-command = "python -c \"from importlib.metadata import distribution; files = [str(f) for f in distribution('pyclesperanto-cuda').files]; assert any('_pyclesperanto' in f for f in files), f'Native extension not found in wheel: {files}'\""

[tool.cibuildwheel.linux]
before-all = "bash {package}/../../scripts/build-cuda-linux.sh"
manylinux-x86_64-image = "manylinux_2_28"
# Build-time environment (stubs needed for linking without GPU)
environment = { CUDA_HOME = "/usr/local/cuda", PATH = "/usr/local/cuda/bin:$PATH", LD_LIBRARY_PATH = "/usr/local/cuda/lib64:/usr/local/cuda/lib64/stubs:$LD_LIBRARY_PATH", SKBUILD_CMAKE_ARGS = "-DCLE_BACKEND=CUDA"}
# Repair-time: override LD_LIBRARY_PATH to REMOVE stubs, exclude driver libs
repair-wheel-command = """
  LD_LIBRARY_PATH=/usr/local/cuda/lib64 \
  auditwheel show {wheel} && \
  LD_LIBRARY_PATH=/usr/local/cuda/lib64 \
  auditwheel repair \
    --lib-sdir .libs \
    --exclude libcuda.so.1 \
    --exclude libnvidia-ml.so.1 \
    --exclude libnvidia-ptxjitcompiler.so.1 \
    -w {dest_dir} {wheel}
"""

## IMPORTANT: cuda version must match the one used to build the wheel
## Current version is 12.6
[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
environment = { SKBUILD_CMAKE_ARGS = "-DCLE_BACKEND=CUDA", CUDA_HOME = "C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6", CUDA_PATH = "C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6", PATH = "C:\\Program Files\\NVIDIA GPU Computing Toolkit\\CUDA\\v12.6\\bin;$PATH"}
repair-wheel-command = "delvewheel show {wheel} && delvewheel repair --add-path \"C:/Program Files/NVIDIA GPU Computing Toolkit/CUDA/v12.6/bin\" --no-dll \"nvcuda.dll;msvcp140.dll;vcruntime140_1.dll;vcruntime140.dll\" -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
# CUDA is not supported on macOS — builds are skipped via the skip pattern above
